# valarpy

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE.txt  README.md  SECURITY.md  codemeta.json  pyproject.toml  readthedocs.yml  tox.ini
.github/: CODEOWNERS  action-options.json  settings.yml
.github/workflows/: commit.yml  publish.yml  pull-test.yml  push-main.yml
config/: example_config.json
docs/: index.rst  notes.rst  setup.rst  usage.rst
tests/: test_connection.py  test_init.py  test_metamodel.py  test_models.py  test_transactions.py  test_write_access.py
valarpy/: __init__.py  connection.py  definitions.py  factories.py  metamodel.py  model.py
